--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "yfnfb",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.mjs",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
