--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yfnfb",
+  "name": "stages",
   "version": "1.0.0",
   "main": "./dist/index.mjs",
   "type": "module",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/node": "^22.10.7",
-    "typescript": "^5.7.3"
+    "@types/node": "22.13.10",
+    "typescript": "5.8.2"
   }
 }
